# etl-rust

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  build_proto.rs
docs/: deserialization.md  develop.md  etl-infrastructure-architecture.md  extraction.md  features.md  protobuf.md
scripts/: setup.sh
src/: README.md  constants.rs  features.rs  lib.rs  main.rs
src/aptos_config/: build_proto.rs  enumtostring.rs  mod.rs  streampublisher.rs  tests.rs
src/aptos_config/grpc/: environment.rs  mod.rs  stream.rs
src/aptos_config/processing/: deferred.rs  mod.rs  traits.rs
src/aptos_config/processing/reps/: abilties.rs  address.rs  changes.rs  events.rs  function.rs  generictypeparam.rs  hashval.rs  json.rs  mod.rs  module.rs  moduleid.rs  movetype.rs  mvstruct.rs  payload.rs  publickey.rs  signatures.rs  sigvalue.rs  structtag.rs  timestamp.rs  visibility.rs
src/aptos_config/processing/reps/transaction/: mod.rs  tx.rs  tx_data.rs  tx_info.rs
src/aptos_config/processing/tables/: all.rs  blocks.rs  changes.rs  events.rs  mod.rs  options.rs  signatures.rs  transactions.rs
src/aptos_config/proto_codegen/: aptos.blocks.rs  aptos.changes.rs  aptos.common.rs  aptos.modules.rs  aptos.pubsub_range.rs  aptos.records.rs  aptos.resource_extras.rs  aptos.signatures.rs  aptos.table_items.rs  aptos.transactions.rs  json.events.rs  json.resources.rs  json.rs  mod.rs
src/aptos_config/proto_src/: blocks.proto  changes.proto  common.proto  events.proto  json.proto  modules.proto  pubsub_range.proto  records.proto  resources.proto  resources_extras.proto  signatures.proto  table_items.proto  transactions.proto
src/aptos_config/scripts/: README.md  test.py
src/example_config/: avro_helpers.rs  build_proto.rs  constants.rs  mod.rs
src/example_config/avro_schemas/: README.md
src/example_config/extraction/: README.md
src/example_config/output/: README.md
src/example_config/proto_src/: README.md
src/example_config/proto_src/transformation/: README.md
src/output/: apache_kafka.rs  gcs.rs  google_pubsub.rs  json.rs  jsonl.rs  mod.rs  publish.rs  rabbitmq_classic.rs  rabbitmq_stream.rs
src/output/environment/: apache_kafka.rs  file.rs  gcp.rs  mod.rs  rabbitmq.rs
src/source/: json_rpc.rs  mod.rs
tests/: README.md
tests/examples/: README.md
tests/examples/firsthundred_1_100/records/: 1.pb  10.pb  100.pb  11.pb  12.pb  13.pb  14.pb  15.pb  16.pb  17.pb  18.pb  19.pb  2.pb  20.pb  21.pb  22.pb  23.pb  24.pb  25.pb  26.pb  27.pb  28.pb  29.pb  3.pb  30.pb  31.pb  32.pb  33.pb  34.pb  35.pb  36.pb  37.pb  38.pb  39.pb  4.pb  40.pb  41.pb  42.pb  43.pb  44.pb  (+60 more)
tests/examples/firsthundred_1_100/txs/: 1.pb  10.pb  100.pb  11.pb  12.pb  13.pb  14.pb  15.pb  16.pb  17.pb  18.pb  19.pb  2.pb  20.pb  21.pb  22.pb  23.pb  24.pb  25.pb  26.pb  27.pb  28.pb  29.pb  3.pb  30.pb  31.pb  32.pb  33.pb  34.pb  35.pb  36.pb  37.pb  38.pb  39.pb  4.pb  40.pb  41.pb  42.pb  43.pb  44.pb  (+60 more)
tests/examples/genesis_0_0/records/: 0.pb
tests/examples/primary_sig_123956179_123956179/records/: 123956179.pb
tests/examples/primary_sig_123956179_123956179/txs/: 123956179.pb
tests/examples/secondary_sig_79153343_79153343/records/: 79153343.pb
tests/examples/secondary_sig_79153343_79153343/txs/: 79153343.pb
